--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "gsap": "^3.14.1",
+    "ical.js": "^2.2.1",
     "lucide-react": "^0.555.0",
     "react": "^19.2.1",
+    "react-datepicker": "^9.0.0",
     "react-dom": "^19.2.1",
     "react-router-dom": "^7.10.1"
   },
